# vcorex

./: .env.example  .gitignore  0_tong_quan_readme.md  alembic.ini  analyze_crossovers.py  analyze_rejections.py  audit_script.py  bao_cao_kiem_thu_forensic_test_report.md  bao_cao_kiem_toan_7_ngay_audit_report.md  bao_cao_kiem_toan_audit_review_report_20250610.md  bao_cao_kiem_toan_audit_review_report_20260609.md  bao_cao_sua_loi_forensic_bugfix_report.md  bao_cao_sua_loi_nghiem_trong_high_issues_fix_report.md  bao_cao_tuan_thu_forensic_compliance_report.md  check_db.py  conftest.py  extract_signals.py  forensic_critical_findings_verification_report.md  forensic_okx_exchange_compliance_audit_report.md  forensic_order_lifecycle_audit_report.md  forensic_persistence_restart_recovery_audit_report.md  forensic_telegram_callback_audit_report.md  health_check.py  kien_truc_he_thong_architecture.md  log_parser.py  main.py  parse_log_crossovers.py  phase_24_1a_production_endpoint_validation_patch_report.md  phase_24_1a_r2_patch_removal_audit_report.md  phase_24_1a_r_patch_regression_audit_report.md  phase_24_2_okx_websocket_data_integrity_verification_audit_report.md  pyproject.toml  requirements-dev.txt  requirements.txt  simulate_crossovers.py  start_bot.ps1  temp_env_update.txt  temp_watchlist.txt  test_crossover_counterexample.py  test_risk_fail_closed.py  (+2 more)
alembic/: env.py
config/: canary_config.json  feature_flags.json
core/: __init__.py  account_context.py  audit_journal.py  audit_subscriber.py  bootstrap.py  circuit_breaker.py  container.py  dlq.py  event_bus.py  event_bus_components.py  exceptions.py  metrics.py  observability.py  pid_lock.py  scheduler.py  task_watcher.py
docs/: 1_kien_truc_architecture.md  2_trien_khai_deployment.md  3_van_hanh_operations.md  4_chien_luoc_strategy.md  5_phuc_hoi_recovery.md  6_kiem_thu_testing.md  7_bao_mat_security.md  8_api_okx_integration.md  9_chuyen_may_chu_migration.md  bao_cao_chuyen_doi_migration_report.md  bao_cao_kiem_toan_he_thong_system_audit_report.md
services/: database_maintenance.py  maintenance_scheduler.py  market_data_engine.py  news_engine.py  position_engine.py  reconciliation_service.py  replay_engine.py  snapshot_service.py  trade_journaler.py
(+118 files in other folders)
