[project]
name = "vcorex_institutional"
version = "1.0.0"
authors = [
  { name="Vcorex Team", email="team@vcorex.io" }
]
description = "Institutional-grade trading bot for OKX DEMO"
requires-python = ">=3.14.5"
dependencies = [
  "aiohttp>=3.10.0",
  "aiohappyeyeballs>=2.5.0",
  "aiosignal>=1.4.0",
  "attrs>=23.0.0",
  "frozenlist>=1.4.0",
  "multidict>=6.0.0",
  "propcache>=0.2.0",
  "yarl>=1.17.0",
  "websockets>=12.0",
  "python-telegram-bot>=21.5",
  "httpx>=0.27.0",
  "httpcore>=1.0.0",
  "pydantic-settings>=2.5.0",
  "sqlalchemy>=2.0.30",
  "aiosqlite>=0.20.0",
  "alembic>=1.13.0",
  "loguru>=0.7.2",
  "pydantic>=2.9.0",
  "tenacity>=8.5.0",
  "numpy>=2.0.0",
  "pandas>=2.2.0",
  "greenlet>=3.1.0",
  "python-dotenv>=1.0.0",
  "psutil>=5.9.0",
  "redis>=8.0.0",
  "cachetools>=5.3.0",
  "aiofiles>=23.2.1",
]

[tool.black]
line-length = 100
target-version = ['py314']

[tool.ruff]
line-length = 100
target-version = "py314"
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # bugbear
  "C4", # comprehensions
  "SIM", # simplify
  "ARG", # arguments
  "PD", # pandas
]
ignore = []

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["venv", "\\.venv", "\\.benchmarks", "\\.pytest_cache", "brain", "tests"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration", "tests/institutional"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "benchmark: marks benchmark tests",
    "slow: marks slow running tests",
    "integration: marks integration tests",
    "unit: marks unit tests",
    "security: marks security tests",
    "performance: marks performance tests",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::RuntimeWarning",
]

[tool.pyrefly]
python-version = "3.14.0"
preset = "legacy"
ignore-missing-imports = ["*"]